--- a/GouGou-Live/Classes/LIve/Views/LiveViewCell.xib
+++ b/GouGou-Live/Classes/LIve/Views/LiveViewCell.xib
@@ -3,46 +3,47 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="327" id="KGk-i7-Jjw" customClass="LiveViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="423"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="267" id="KGk-i7-Jjw" customClass="LiveViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="363"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="422"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="362"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oQg-NJ-ho3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="88"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="头像" translatesAutoresizingMaskIntoConstraints="NO" id="4wv-5f-ASs">
-                                <rect key="frame" x="10" y="14" width="60" height="60"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="主播头像" translatesAutoresizingMaskIntoConstraints="NO" id="4wv-5f-ASs">
+                                <rect key="frame" x="10" y="8" width="29" height="29"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="主播名字" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0G7-Fa-fRX">
-                                <rect key="frame" x="80" y="14" width="56" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="定位" translatesAutoresizingMaskIntoConstraints="NO" id="cHv-LB-W2o">
-                                <rect key="frame" x="80" y="55" width="16" height="19"/>
+                                <rect key="frame" x="49" y="23" width="16" height="19"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Dk-vy-yB2">
-                                <rect key="frame" x="101" y="57" width="31" height="15"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="北京" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Dk-vy-yB2">
+                                <rect key="frame" x="70" y="25" width="24" height="15"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="小联系人（辅助）" translatesAutoresizingMaskIntoConstraints="NO" id="Iif-XZ-Y5h">
-                                <rect key="frame" x="295" y="60" width="9" height="10"/>
+                                <rect key="frame" x="309" y="28" width="9" height="10"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="观看人数" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iYn-9X-pW2">
-                                <rect key="frame" x="309" y="56" width="56" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iYn-9X-pW2">
+                                <rect key="frame" x="323" y="24" width="42" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="1" green="0.59999999999999998" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="慧摩尔" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0G7-Fa-fRX">
+                                <rect key="frame" x="49" y="5" width="42" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -51,33 +52,34 @@
                             <constraint firstItem="cHv-LB-W2o" firstAttribute="leading" secondItem="0G7-Fa-fRX" secondAttribute="leading" id="0U2-64-oGo"/>
                             <constraint firstItem="iYn-9X-pW2" firstAttribute="leading" secondItem="Iif-XZ-Y5h" secondAttribute="trailing" constant="5" id="0aG-98-HDz"/>
                             <constraint firstAttribute="trailing" secondItem="iYn-9X-pW2" secondAttribute="trailing" constant="10" id="9H3-mB-cRW"/>
-                            <constraint firstItem="0G7-Fa-fRX" firstAttribute="top" secondItem="4wv-5f-ASs" secondAttribute="top" id="CsU-E3-str"/>
+                            <constraint firstItem="0G7-Fa-fRX" firstAttribute="centerY" secondItem="4wv-5f-ASs" secondAttribute="top" constant="5" id="CsU-E3-str"/>
                             <constraint firstItem="7Dk-vy-yB2" firstAttribute="centerY" secondItem="cHv-LB-W2o" secondAttribute="centerY" id="FmX-16-xek"/>
-                            <constraint firstItem="cHv-LB-W2o" firstAttribute="bottom" secondItem="4wv-5f-ASs" secondAttribute="bottom" id="Fuz-Wc-R3l"/>
+                            <constraint firstItem="cHv-LB-W2o" firstAttribute="centerY" secondItem="4wv-5f-ASs" secondAttribute="bottom" constant="-5" id="Fuz-Wc-R3l"/>
                             <constraint firstItem="4wv-5f-ASs" firstAttribute="leading" secondItem="oQg-NJ-ho3" secondAttribute="leading" constant="10" id="JLD-R6-mbU"/>
                             <constraint firstItem="0G7-Fa-fRX" firstAttribute="leading" secondItem="4wv-5f-ASs" secondAttribute="trailing" constant="10" id="KYY-vZ-lMC"/>
-                            <constraint firstAttribute="height" constant="88" id="Kjg-6w-C08"/>
+                            <constraint firstAttribute="height" constant="44" id="Kjg-6w-C08"/>
                             <constraint firstItem="4wv-5f-ASs" firstAttribute="centerY" secondItem="oQg-NJ-ho3" secondAttribute="centerY" id="Kwi-GQ-kxQ"/>
                             <constraint firstItem="Iif-XZ-Y5h" firstAttribute="centerY" secondItem="iYn-9X-pW2" secondAttribute="centerY" id="hgZ-Hd-X78"/>
                             <constraint firstItem="iYn-9X-pW2" firstAttribute="centerY" secondItem="cHv-LB-W2o" secondAttribute="centerY" id="usK-2P-ZsN"/>
                             <constraint firstItem="7Dk-vy-yB2" firstAttribute="leading" secondItem="cHv-LB-W2o" secondAttribute="trailing" constant="5" id="wOf-IO-qoc"/>
                         </constraints>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="duw-Bd-2R2">
-                        <rect key="frame" x="0.0" y="88" width="375" height="200"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="banner" translatesAutoresizingMaskIntoConstraints="NO" id="duw-Bd-2R2">
+                        <rect key="frame" x="0.0" y="44" width="375" height="200"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="200" id="UKT-uK-dst"/>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="pSx-CT-Aq3"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="直播中" translatesAutoresizingMaskIntoConstraints="NO" id="mz9-C8-9Pf">
-                        <rect key="frame" x="316" y="98" width="49" height="17"/>
+                        <rect key="frame" x="316" y="54" width="49" height="17"/>
                     </imageView>
-                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VrR-9q-xAd">
-                        <rect key="frame" x="0.0" y="288" width="375" height="134"/>
+                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VrR-9q-xAd">
+                        <rect key="frame" x="0.0" y="244" width="375" height="118"/>
+                        <color key="backgroundColor" red="0.95759671233874921" green="0.9923124357744959" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </scrollView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CFE-qk-BsY">
-                        <rect key="frame" x="0.0" y="268" width="375" height="20"/>
+                        <rect key="frame" x="0.0" y="224" width="375" height="20"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="一窝狗" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GaA-2j-YOu">
                                 <rect key="frame" x="10" y="2" width="36" height="15"/>
@@ -131,11 +133,12 @@
                 <outlet property="roomMessageLabel" destination="GaA-2j-YOu" id="g0g-Go-0jo"/>
                 <outlet property="watchCountLabel" destination="iYn-9X-pW2" id="BJT-dw-7we"/>
             </connections>
-            <point key="canvasLocation" x="534.5" y="-251.5"/>
+            <point key="canvasLocation" x="534.5" y="-281.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="头像" width="60" height="60"/>
+        <image name="banner" width="375" height="110"/>
+        <image name="主播头像" width="29" height="29"/>
         <image name="定位" width="16" height="19"/>
         <image name="小联系人（辅助）" width="9" height="10"/>
         <image name="直播中" width="49" height="17"/>
