--- a/GouGou-Live/Classes/Me/Controllers/PayingViewController.xib
+++ b/GouGou-Live/Classes/Me/Controllers/PayingViewController.xib
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1912" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PayingViewController">
             <connections>
                 <outlet property="playingTextfiled" destination="hkK-FV-1pK" id="bqQ-CP-N7V"/>
+                <outlet property="pointLabel" destination="v8S-jH-3mR" id="ZgF-sI-d1K"/>
                 <outlet property="sureButton" destination="Xhr-t7-FW9" id="5Qz-jU-hig"/>
                 <outlet property="ueserNameTexfiled" destination="KSS-ay-6W6" id="Tae-y6-cAD"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -18,7 +19,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="刘章良" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KSS-ay-6W6">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="用户名" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KSS-ay-6W6">
                     <rect key="frame" x="60" y="15" width="305" height="30"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -129,7 +130,7 @@
                 <constraint firstItem="KSS-ay-6W6" firstAttribute="leading" secondItem="YL3-Pv-L23" secondAttribute="trailing" constant="10" id="ubr-M9-Cq1"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-            <point key="canvasLocation" x="348.5" y="133.5"/>
+            <point key="canvasLocation" x="560.5" y="102.5"/>
         </view>
     </objects>
     <resources>
