--- a/GouGou-Live/Classes/Me/Controllers/PayingViewController.xib
+++ b/GouGou-Live/Classes/Me/Controllers/PayingViewController.xib
@@ -10,7 +10,7 @@
                 <outlet property="playingTextfiled" destination="hkK-FV-1pK" id="bqQ-CP-N7V"/>
                 <outlet property="pointLabel" destination="v8S-jH-3mR" id="ZgF-sI-d1K"/>
                 <outlet property="sureButton" destination="Xhr-t7-FW9" id="5Qz-jU-hig"/>
-                <outlet property="ueserNameTexfiled" destination="KSS-ay-6W6" id="Tae-y6-cAD"/>
+                <outlet property="userNameTexfiled" destination="KSS-ay-6W6" id="ePh-xQ-OM2"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -25,7 +25,7 @@
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="我的（未点击）" translatesAutoresizingMaskIntoConstraints="NO" id="mjY-TA-ykG">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="我的（未点击）" translatesAutoresizingMaskIntoConstraints="NO" id="mjY-TA-ykG">
                     <rect key="frame" x="20" y="19" width="19" height="22"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YL3-Pv-L23">
